<?xml version="1.0"?>
<package format="2">
  <!-- Mahesh Saboo (160595) - mssaboo@iitk.ac.in -->
	
  <name>disparity_calc</name>
  <version>0.0.0</version>
  <description>Disparity Calculation for stereo images</description>

  <maintainer email="mssaboo@iitk.ac.in">Mahesh Saboo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
